--- a/assets.css
+++ b/assets.css
@@ -6,3 +6,12 @@
   	height: auto;
   	margin:10px;
 }
+html{
+	background: url(images/background.jpg) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	text-align: center;
+	color: azure;
+}
